--- a/src/css/NewsHunt.css
+++ b/src/css/NewsHunt.css
@@ -61,3 +61,15 @@ footer {
 .card:hover {
   transform: scale(1.02);
 }
+
+a {
+  color: #000;
+}
+
+a:hover {
+  color: #039be5;
+}
+
+.footer-links a {
+  color: #039be5;
+}
