--- a/src/css/NewsHunt.css
+++ b/src/css/NewsHunt.css
@@ -16,6 +16,12 @@ nav ul li.active {
   background-color: #ffab40;
 }
 
+#logo {
+  color: #98ff98;
+  text-align: center;
+  font-style: italic
+}
+
 @media only screen and (min-width: 992px) {
     .nav-content {
         display: none;
@@ -79,12 +85,31 @@ footer {
   transform: scale(1.02);
 }
 
-a {
-  color: #000;
+.error-message {
+  background-color: #ff7272;
+  z-index: +1;
+  margin-top: -1em;
+  color: white;
+  padding: 1em;
 }
+
+/*a {
+  color: #000;
+}*/
 
 a:hover {
   color: #039be5;
+}
+
+.progress {
+  z-index: +1;
+  margin-top: -1em;
+  padding: 0.5em;
+}
+
+.spinner-layer {
+  width: 100%;
+  height: 100%;
 }
 
 .footer-links a {
